# ai-assistant-demo

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  servers.toml
.claude/: launch.json
db/init/: 01_schema.sql  02_tool_registry.sql  03_memory.sh  03_memory.sql
scripts/: generate_keys.py  preview_ui.py
src/assistant/: cli.py  config.py  prompt.py
src/assistant/audit/: log.py
src/assistant/guardrails/: broker.py  confirmation.py  registry.py
src/assistant/memory/: __init__.py  embeddings.py  facts.py  persona.py
src/assistant/model/: base.py  claude.py
src/assistant/orchestrator/: loop.py
src/assistant/webui/: __init__.py  decisions.py  server.py
src/assistant/webui/static/: app.js  index.html  style.css
src/mcpservers/: __init__.py  files.py  notes.py
src/toolwrapper/: bridge.py  config.py  server.py  verify.py
src/voiceclient/: __init__.py  audio.py  client.py  config.py  loop.py  stt.py  tts.py  wake.py
tests/: conftest.py  test_bypass.py  test_memory.py  test_memory_orchestrator.py  test_orchestrator.py  test_registry.py  test_tiering.py  test_voice.py  test_webui.py
