[project]
name = "ai-assistant-demo"
version = "0.1.0"
description = "Personal Jarvis-style AI assistant — Phase 2: real tools via MCP"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "pyjwt[crypto]",
    "psycopg[binary]",
    "httpx",
    "python-dotenv",
    "mcp",
]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
assistant = "assistant.cli:main"
tool-wrapper = "toolwrapper.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant", "src/toolwrapper", "src/mcpservers"]
